--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "react-native-svg-transformer": "^0.14.3"
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "react-native-svg-transformer": "^0.14.3",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
