--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
+    "react-navigation-stack": "react-navigation/stack",
     "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
